# AI-learning

./: AI-PLAYGROUND-TASKS-1.md  AI-PLAYGROUND-TASKS-2.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: build-deploy.yml  buildraylibcs.yml  unity-activation.yml  unity-build.yml
Unity project/: .gitignore
Unity project/Assets/Scenes/: HelloWorld.unity  Match3.unity  RootScene.unity
Unity project/Assets/Scripts/: BackToMenu.cs  HelloWorld.cs  SceneLoader.cs
Unity project/Assets/Scripts/Match3/: Board.cs  ComboDisplay.cs  DragController.cs  Match3Bootstrap.cs  Match3SceneSetup.cs  Orb.cs
Unity project/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  InputManager.asset  NavMeshAreas.asset  PackageManagerSettings.asset  Physics2DSettings.asset  PresetManager.asset  ProjectSettings.asset  QualitySettings.asset  UnityConnectSettings.asset
claude-tasks/: AI-PLAYGROUND-TASKS.md
launcher/: index.html
prototypes/match3-pad/: game.js  index.html
prototypes/sdf-playground/: index.html  package.json
prototypes/sdf-playground/src/: main.js
raylibcs/: Program.cs  RaylibCS.csproj  index.html  main.js
steamDeckRewind/: LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
steamDeckRewind/config/: default.yaml
steamDeckRewind/deck_rewind/: __init__.py  config.py  daemon.py  game_monitor.py  hotkey_listener.py  main.py  restore.py  snapshot.py  ui.py
steamDeckRewind/systemd/: deck-rewind.service
steamDeckRewind/tests/: __init__.py  test_game_monitor.py  test_hotkey.py  test_snapshot.py
