[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deck-rewind"
version = "1.0.0"
description = "Save-state functionality for Steam Deck games"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Deck Rewind Team"}
]
keywords = ["steam-deck", "gaming", "save-state", "rewind", "checkpoint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Recovery Tools",
]

dependencies = [
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "evdev>=1.6.0",
    "notify2>=0.3.1",
    "zstandard>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
deck-rewind = "deck_rewind.main:main"

[project.urls]
Homepage = "https://github.com/[USER]/deck-rewind"
Documentation = "https://github.com/[USER]/deck-rewind#readme"
Repository = "https://github.com/[USER]/deck-rewind"
Issues = "https://github.com/[USER]/deck-rewind/issues"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
